--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 		--muted-foreground: 215.4 16.3% 46.9%;
 
 		--accent: 210 40% 96.1%;
-		--accent-orange: 28.9 79.4 60;
+		--accent-orange: 28.9 79.4% 60%;
 		--accent-yellow: 43.5 88.8% 68.6%;
 		--accent-green: 104.2 54.6% 81%;
 		--accent-brown: 29.1 79.8% 25.3%;
